envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              request_headers_to_add:
                - header:
                    key: "X-Real-IP"
                    value: "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
              routes:
              - match:
                  prefix: "/orders/"
                route:
                  prefix_rewrite: "/"
                  cluster: order-app
              - match:
                  prefix: "/payment/"
                route:
                  prefix_rewrite: "/"
                  cluster: payment-app
              - match:
                  prefix: "/stock/"
                route:
                  prefix_rewrite: "/"
                  cluster: stock-app

  clusters:
  - name: order-app
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: order-app
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: order-service
                port_value: 5000

  - name: payment-app
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: LEAST_REQUEST
    load_assignment:
      cluster_name: payment-app
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: payment-service
                port_value: 5000

  - name: stock-app
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: LEAST_REQUEST
    load_assignment:
      cluster_name: stock-app
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: stock-service
                port_value: 5000
